# bruto-pascal

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  LANGUAGE-TODO.md  README.md  SAMPLE.PAS  demo.pas  long-demo.pas
.github/workflows/: ci.yml  publish.yml  release.yml
cache/: upload_cache.json
demo-units/: Demo.pas  MathUtils.pas  Shapes.pas
docs/: BRUTO-PASCAL-LANGUAGE.md
docs/superpowers/plans/: 2026-04-20-pascal-features-batch2.md
local-only/: BRUTO-IDE-0.1.0.md
src/: ast.rs  codegen.rs  commands.rs  config.rs  debugger.rs  gutter.rs  ide_editor.rs  main.rs  output_panel.rs  parser.rs  update.rs  watch_window.rs
