[workspace]
members = [".", "bruto-lang", "bruto-ide", "bruto-pascal-lang"]

[package]
name = "bruto-pascal"
version = "0.1.0"
edition = "2024"
authors = ["Enzo Lombardi <enzinol@gmail.com>"]
repository = "https://github.com/aovestdipaperino/bruto-pascal"

[dependencies]
bruto-ide = { path = "bruto-ide" }
bruto-lang = { path = "bruto-lang" }
bruto-pascal-lang = { path = "bruto-pascal-lang" }
inkwell = { version = "0.8.0", features = ["llvm18-1"] }
turbo-vision = { path = "turbo-vision-4-rust" }

[patch."https://github.com/aovestdipaperino/turbo-vision-4-rust.git"]
turbo-vision = { path = "turbo-vision-4-rust" }

[patch."https://github.com/aovestdipaperino/bruto-ide.git"]
bruto-ide = { path = "bruto-ide" }

[patch."https://github.com/aovestdipaperino/bruto-lang.git"]
bruto-lang = { path = "bruto-lang" }
